testing integragion of projetc