@@ -8,6 +8,7 @@ import backend.domain.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class AddressSearchServiceImpl extends AddressAbstractService<Void, List<AddressDto>> implements AddressSearchService {
@@ -27,6 +28,6 @@ public class AddressSearchServiceImpl extends AddressAbstractService<Void, List<
   @Override
   protected List<AddressDto> rule(User user, Void input) {
     return user.getAddresses().stream()
-      .map(addressDtoMapper::mapToDto).toList();
+      .map(addressDtoMapper::mapToDto).collect(Collectors.toList());
   }
 }
